# pybookmarks

./: README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
config/: project.py  python.py  version.py
pybookmarks/: static.py
snipplets/: main.rst.mako
src/pybookmarks/: main.py  utils.py
templates/: pyproject.toml.mako.moved
