[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybookmarks"
version = "0.0.2"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Book mark manager and sync between browsers"
readme = "README.md"
license = "MIT"
keywords=[
    "google-chrome",
    "chrome",
    "firefox",
    "bookmarks",
    "json",
    "html",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pybookmarks"
"Bug Tracker" = "https://github.com/veltzer/pybookmarks/issues"
"Documentation" = "https://veltzer.github.io/pybookmarks"
"Download" = "https://pypi.org/project/pybookmarks/"
"Repository" = "https://github.com/veltzer/pybookmarks"

[project.scripts]
pybookmarks = "pybookmarks.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pybookmarks"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pybookmarks/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
